# obs-shaderfilter

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PR5_fixes.patch  README.md  SESSION-STATE.md  audio_reactive.hlsl  build.sh  obs-shaderfilter.c  obs-shaderfilter.h  vignette.shader
.github/workflows/: build.yml
aiko/: app.js  index.html
data/examples/: 3d_text_sdf.shader  drop_shadow_advanced.shader  echo_chroma_pulse.shader  manga_screentone_cel.shader  outline_canny.shader  sdf_default.shader  vignette_pulse.shader
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  pt-BR.ini  zh-CN.ini
data/shaders/: audio_reactive_blend.effect
data/shaders/examples/: akira_trails.effect  audio_bars.shader  audio_pulse.effect  audio_reactive_blend.effect  audio_reactive_blur.effect  audio_reactive_glow.shader  audio_texture_visualizer.effect  audio_textures_example.effect  dual_input_composite.effect  dynamic_color_grade.shader  feedback_example.effect  global_uniforms_example.effect  particle_system.shader  test_multi_input.effect  ui_widgets_example.effect
docs/superpowers/plans/: 2026-05-25-auto-reload-inline-error.md
docs/superpowers/specs/: 2026-05-25-auto-reload-inline-error-design.md
include/: audio_reactive.hpp  filter_data.hpp  global_uniforms.hpp  hot_reload.hpp  logging.hpp  multi_input.hpp  obs-enum-sources.h  obs_shim.h  shader_filter.hpp  shader_filter_data.hpp  shader_state.hpp  wrappers.hpp
include/obs/: obs-enum-sources.h
include/obs/graphics/: gs_effect.h  gs_texrender.h
include/obs/util/: circlebuf.h
src/: audio_reactive.cpp  audio_reactive_stub.cpp  global_uniforms.cpp  hot_reload.cpp  multi_input.cpp  obs-shaderfilter-plus-next.cpp  shader_filter.cpp  shader_filter_properties.cpp
tests/: test_hot_reload.cpp
